--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "apexcharts": "^4.7.0",
     "axios": "^1.8.2",
     "concurrently": "^9.1.2",
     "react": "^19.0.0",
