--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^7.4.0",
     "react-scroll": "^1.9.3",
     "recharts": "^2.15.1",
-    "sweetalert2": "^11.19.1"
+    "sweetalert2": "^11.19.1",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
